[package]
name = "encryption"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
itertools = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
polynomial-ring = "0.4"
ring-algorithm = "0.4"
rand = "0.8"
